2005-02-18  Eero Tamminen <eerot@sf>
	* NEWS: Added notes about user visible GraphViz and StatisticsChart
	  report changes/enhancements

2005-02-20 Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Update.

2005-02-20 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py (draw_path,draw_bar): Set proper linewidth.
	* doc/gramps-manual/C/usage.xml: Update.

2005-02-20  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ReportUtils.py: use today for age calculation if not
	death date exists.
	* src/plugins/NavWebPage.py: handle privacy if requested

2005-02-19  Don Allingham  <dallingham@users.sourceforge.net>

	* src/ChooseParents.py: readonly fixes
	* src/EditPerson.py: readonly fixes
	* src/EditPlace.py: readonly fixes
	* src/EditSource.py: readonly fixes
	* src/FamilyView.py: readonly fixes
	* src/ImageSelect.py: readonly fixes
	* src/Marriage.py: readonly fixes
	
	* src/EditPerson.py: add privacy marker
	* src/GrampBSDDB.py: record database version, handle person privacy flag
	* src/RelLIb.py: Privacy flag for person (inherit from DataObj instead of SourceNote)
	* src/ReportUtils.py: update to use person privacy flag
	* src/gramps.glade: person privacy flag

2005-02-19 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ArgHandler.py: Command line support for geneweb import
	and export; Fix command line exports for gedcom, XML, and package.
	* src/Exporter.py (help): Point to correct manual section.
	* src/const.py.in: Add a constant for geneweb mime type name.
	* src/plugins/WriteFtree.py: Support wizard and fix command line mode.
	* src/plugins/writeftree.glade: Support export wizard.
	* src/plugins/WritePkg.py: Support wizard and fix command line mode.
	* src/plugins/ImportGeneWeb.py: Comment out debugging messages.
	* src/plugins/WriteGeneWeb.py: Support for command-line export.

	* doc/gramps-manual/C/usage.xml: Update.
	* doc/gramps-manual/C/gramps-manual.xml: Chunk to depth 3.
	* doc/gramps-manual/C/figures/gedcom-export.png: Update.