@@ -5,6 +5,9 @@
 2005-02-20 Alex Roitman  <shura@alex.neuro.umn.edu>
 	* NEWS: Update.
 
+	* src/docgen/PSDrawDoc.py (draw_text,write_at):
+	Attempt latin1 encoding.
+
 2005-02-20 Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/docgen/LPRDoc.py (draw_path,draw_bar): Set proper linewidth.
 	* doc/gramps-manual/C/usage.xml: Update.
